--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <div class="navbar-image"></div> <div class="navbar-text">Jerome Fisher M&T Innovation Fund</div>
+                    <div class="navbar-image"></div> <!-- <div class="navbar-text">Jerome Fisher M&T Innovation Fund</div> -->
                 </a>
             </div>
 
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="brand-logo"></div>
-                        <h1 class="brand-heading">The Jerome Fisher M&T<br>Innovation Fund</h1>
+                        <!-- <h1 class="brand-heading">The Jerome Fisher M&T<br>Innovation Fund</h1> -->
                         <p class="intro-text">Seed-stage cash grants and venture development for University of Pennsylvania startups.<br>Managed by students in the Jerome Fisher Management and Technology Program.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -120,15 +120,15 @@
                 <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                   <li>
+                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
+                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                    </li>   
                 </ul>
             </div>
         </div>
@@ -139,8 +139,32 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Jerome Fisher M&T Innovation Fund 2014</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h4><strong>M&amp;T Innovation Fund</strong>
+                    </h4>
+                    <p>3539 Locust Walk<br>Philadelphia, PA 19104</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                        </li>
+                    </ul>
+                    <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i></a>
+                        </li>
+                    </ul>
+                    <hr class="small">
+                    <p class="text-muted">Copyright &copy; M&amp;T Innovation Fund 2014</p>
+                </div>
+            </div>
         </div>
     </footer>
 
