making sure everything's pushed

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#apply">Apply</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -87,7 +90,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section text-center red">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About the M&T Innovation Fund</h2>
@@ -99,20 +102,73 @@
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <section id="download" class="content-section text-center black">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h1>Venture development and resources provided post-investment</h1>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="apply" class="container content-section text-center red">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Apply Now</h2>
+                <form class="form-horizontal">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label for="inputventure" class="control-label col-xs-4">Venture Name</label>
+                                <div class="col-xs-8">
+                                    <input type="text" class="form-control" id="inputventure" placeholder="Venture Name">
+                                </div>
+                            </div> 
+                            <div class="form-group">
+                                <label for="inputcontact" class="control-label col-xs-4">Contact Name</label>
+                                <div class="col-xs-8">
+                                    <input type="text" class="form-control" id="inputcontact" placeholder="Contact Name">
+                                </div>
+                            </div>  
+                            <div class="form-group">
+                                <label for="inputemail" class="control-label col-xs-4">Contact Email</label>
+                                <div class="col-xs-8">
+                                    <input type="email" class="form-control" id="inputemail" placeholder="Contact Email">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label for="inputdescription" class="control-label col-xs-4">Venture Description</label>
+                                <div class="col-xs-8">
+                                    <textarea type="text" class="form-control" id="inputdescription" placeholder="Venture Description"></textarea>
+                                </div>
+                            </div> 
+                            <div class="form-group">
+                                <label for="inputpitch" class="control-label col-xs-4">Venture Pitch</label>
+                                <div class="col-xs-8">
+                                    <div class="input-group">
+                                <span class="input-group-btn">
+                                    <span class="btn btn-primary btn-file">
+                                        Browse&hellip; <input type="file" multiple>
+                                    </span>
+                                </span>
+                                <input type="text" class="form-control" readonly>
+                            </div> 
+                                </div>
+                            </div> 
+
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="contact" class="container content-section text-center blue">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Start Bootstrap</h2>
