--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#team">Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#apply">Apply</a>
@@ -96,19 +99,56 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About the M&T Innovation Fund</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>The <strong>M&T Innovation Fund</strong> is a new, University and M&T Program backed student run organization looking to provide non-equity grants for seed-stage ventures started by current Penn students or recent M&T alumni. Grants will range from <strong>$1000 to $5000.</strong></p>
+
+                <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund. Current students work for either the <strong>Investment team</strong> or the <strong>Value Creation team.</strong></p>
+
+                <p>The <strong>Investment team</strong> sources ventures, conducts due diligence, and makes the final investment decisions. A rigorous evaluation process allows the Fund to target high quality, technical ventures.</p>
+
+                <p>The <strong>Value Creation team</strong> acts as consultants for each backed venture. The Value Creation team provides insights into evaluating new markets, growing customer bases, developing and commercializing technologies, and connecting teams with mentors, legal advisors, and additional funding. </p>
             </div>
         </div>
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center black">
-        <div class="download-section">
+    <section id="crest" class="content-section text-center black">
+        <div class="crest-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>Venture development and resources provided post-investment</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Section -->
+    <section id="team" class="content-section text-center white">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Team</h2>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-3"></div>
                 </div>
             </div>
         </div>
@@ -119,57 +159,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Apply Now</h2>
-                <form class="form-horizontal apply">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label class="control-label col-sm-4">Venture Name</label>
-                                <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="inputventure" name="inputventure" placeholder="Venture Name">
-                                </div>
-                            </div> 
-                            <div class="form-group">
-                                <label class="control-label col-sm-4">Contact Name</label>
-                                <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="inputcontact" name="inputcontact" placeholder="Contact Name">
-                                </div>
-                            </div>  
-                            <div class="form-group">
-                                <label class="control-label col-sm-4">Contact Email</label>
-                                <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="inputemail" name="inputemail" placeholder="Contact Email">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label class="control-label col-sm-4">Venture Description</label>
-                                <div class="col-sm-8">
-                                    <textarea type="text" class="form-control" id="inputdescription" placeholder="Venture Description"></textarea>
-                                </div>
-                            </div> 
-                            <div class="form-group">
-                                <label class="control-label col-sm-4">Venture Pitch</label>
-                                <div class="col-sm-8">
-                                    <div class="input-group">
-                                <span class="input-group-btn">
-                                    <span class="btn btn-primary btn-file">
-                                       <i class="fa fa-file"></i> <input type="file" multiple>
-                                    </span>
-                                </span>
-                                <input type="text" class="form-control" readonly>
-                            </div> 
-                                </div>
-                            </div> 
-
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                        </div>
-                    </div>
-                </form>
+                <p>Applications </p>
             </div>
         </div>
     </section>
