--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <section id="about" class="container content-section text-center red">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About the M&T Innovation Fund</h2>
+                <h1>About the M&T Innovation Fund</h1>
                 <p>The <strong>M&T Innovation Fund</strong> is a new, University and M&T Program backed student run organization looking to provide non-equity grants for seed-stage ventures started by current Penn students or recent M&T alumni. Grants will range from <strong>$1000 to $5000.</strong></p>
 
                 <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund. Current students work for either the <strong>Investment team</strong> or the <strong>Value Creation team.</strong></p>
@@ -113,9 +113,34 @@
     <!-- Download Section -->
     <section id="crest" class="content-section text-center black">
         <div class="crest-section">
-            <div class="container">
+            <div class="container text-box">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h1>The M&T Fund Difference</h1>
+                    <p>The M&T Fund differentiates itself as a unique provider of both financial and strategic support for the ventures it selects. Receiving a grant from the Fund will provide initial capital that can help get seed stage ventures closer to their goals. Perhaps more importantly, chosen startups can leverage the varied experiences and insights of current students, who will provide critical strategic insights into bringing a product to market. These companies can also gain valuable connections and mentorship from successful M&T alumni to further their venture.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="sponsors" class="content-section text-center white">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1>Sponsors</h1>
+                <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni. 
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="apply" class="container content-section text-center black">
+        <div class="snow-section">
+            <div class="container text-box">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Venture development and resources provided post-investment</h1>
+                    <h1>Apply Now</h1>
+                    <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Submit your information below and we will contact you shortly!</p>
+                    <a href="#" class="btn btn-default btn-lg">Apply Now</a>
                 </div>
             </div>
         </div>
@@ -125,7 +150,7 @@
     <section id="team" class="content-section text-center white">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Team</h2>
+                <h1>Team</h1>
                 <div class="row">
                     <div class="col-lg-3"></div>
                     <div class="col-lg-3"></div>
@@ -150,16 +175,6 @@
                     <div class="col-lg-3"></div>
                     <div class="col-lg-3"></div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="apply" class="container content-section text-center red">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Apply Now</h2>
-                <p>Applications </p>
             </div>
         </div>
     </section>
