Adding bios etc.

--- a/index.html
+++ b/index.html
@@ -152,28 +152,42 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h1>Team</h1>
                 <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
+                    <!-- <div class="col-lg-3"></div> -->
+                    <div class="col-lg-4">
+                        <div class="row">
+                            <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
+                        </div>
+                        <h2>Jeff Grimes</h2>
+                        <p>Jeff is an M&T senior studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/anu.png" class="img-responsive" alt="Responsive image">
+                        <h2>Anubhav Maheshwari</h2>
+                        <p>Anubhav (Anu) is a senior in M&T who loves learning about technology companies. During college, he has interned previously at a young Philadelphia internet start up, as well as evaluated and funded student founded startups as Chair of the Weiss Tech House Innovation Fund. After graduation in May 2015, he will be joining Morgan Stanley's Technology Investment Banking team in New York.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/nina.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Nina Lu</h2>
+                        <p>Nina is a junior in the M&T program studying Computer Science and Finance. She is a former Apple and Microsoft intern and blogs on Medium about tech. She enjoys late night runs, philosophy, and sourcing new music on SoundCloud.</p>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-3"></div>
+                    <!-- <div class="col-lg-3"></div> -->
+                    <div class="col-lg-4">
+                        <img src="img/max.png" class="img-responsive" alt="Responsive image">
+                        <h2>Max Isenberg</h2>
+                        <p>Max is a junior from the San Francisco Bay Area studying Materials Science, Finance, and Entrepreneurial Management. He is interested in alternative energy and cleantech, and hopes to eventually work in a strategic role at a company in either of those industries. In his free time, he enjoys following Major League Baseball, running on treadmills while listening to indie rock, and eating at different Philly restaurants.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/lauren.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Lauren Reeder</h2>
+                        <p>Lauren is a junior in M&T studying Computer Science, Statistics, and Finance. She has previously worked at an education technology start-up and is also a member of the Dorm Room Fund in Philadelphia. She loves to ski, bike, and travel whenever the opportunity arrises.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/karan.jpg" class="img-responsive" alt="Responsive image">
+                        <h2>Karan Hiremath</h2>
+                        <p>Karan is a Junior in the M&T Program studying Computer Science, Management,and Finance from South Jersey. He has previously worked at the Office of Naval Research, a Philadelphia Venture Capital Firm, and on his own startup. He is interested in Entreprise Tech and Machine Learning. Karan enjoys reading, watching tv, listening to music, and cooking in his free time.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -183,20 +197,17 @@
     <section id="contact" class="container content-section text-center blue">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Us</h2>
+                <p>Want to learn more about the M&T Innovation Fund? Interested in participating in the Fund as a sponsor or mentor? Please feel free to reach out to us with your questions and inquiries.</p>
+                <p><a href="mailto:info@mandtinnovationfund.com">info@mandtinnovationfund.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                    <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                        <a href="https://www.facebook.com/MandTInnovationFund" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
                         <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">LinkedIn</span></a>
-                    </li>   
+                    </li>  
                 </ul>
             </div>
         </div>
@@ -215,18 +226,15 @@
                     <p>3539 Locust Walk<br>Philadelphia, PA 19104</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@mandtinnovationfund.com">info@mandtinnovationfund.com</a>
                         </li>
                     </ul>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i></a>
+                            <a href="https://www.facebook.com/MandTInnovationFund" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i></a>
                         </li>
                         <li>
                             <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
@@ -241,9 +249,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Or use the original one with all validators included -->
-    <script src="js/bootstrapValidator.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
