changing some wording

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         <div class="crest-section">
             <div class="container text-box">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h1>The M&T Fund Difference</h1>
-                    <p>The M&T Fund differentiates itself as a unique provider of both financial and strategic support for the ventures it selects. Receiving a grant from the Fund will provide initial capital that can help get seed stage ventures closer to their goals. Perhaps more importantly, chosen startups can leverage the varied experiences and insights of current students, who will provide critical strategic insights into bringing a product to market. These companies can also gain valuable connections and mentorship from successful M&T alumni to further their venture.
+                    <h1>The M&T Innovation Fund Difference</h1>
+                    <p>The M&T Innovation Fund differentiates itself as a unique provider of both financial and strategic support for the ventures it selects. Receiving a grant from the Fund will provide initial capital that can help get seed stage ventures closer to their goals. Perhaps more importantly, chosen startups can leverage the varied experiences and insights of current students, who will provide critical strategic insights into bringing a product to market. These companies can also gain valuable connections and mentorship from successful M&T alumni to further their venture.
                     </p>
                 </div>
             </div>
