--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <a href="https://www.facebook.com/MandTInnovationFund" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/MandTInnovation" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>  
                 </ul>
             </div>
@@ -234,7 +234,7 @@
                             <a href="https://www.facebook.com/MandTInnovationFund" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i></a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
+                            <a href="https://twitter.com/MandTInnovation" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
