--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <h1>Apply Now</h1>
                     <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Submit your information below and we will contact you shortly!</p>
                     <a href="https://docs.google.com//forms/d/1FrH1uzUnmfjuyY_at99jGmQxyfKNAdbnzzxjd2Rrkfk/viewform" class="btn btn-default btn-lg">Apply Now</a> -->
-                    <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? We will be opening up applications for the fund soon!</p>
+                    <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p>
                 </div>
             </div>
         </div>
